@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.8.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed the dictionary module not handling if the language detection string was lost across save/load
 ---------------------------------------------------------------------------------------------------
 Version: 0.8.1
 Date: 2021-08-09
